add detect html tag method

--- a/resource/nodejs.html
+++ b/resource/nodejs.html
@@ -29,6 +29,9 @@
   <meta name="twitter:image" content="https://nodejs.org/static/images/logo-hexagon-card.png">
   <meta name="twitter:image:alt" content="The Node.js Hexagon Logo">
 
+  <meta name="descriptions" content="xxxxxxxxxxx">
+  <meta name="keywords" content="xxxxxxxxxxx">
+
   <link rel="canonical" href="https://nodejs.org/en/">
   <link rel="alternate" href="/en/feed/blog.xml" title="Node.js Blog" type="application/rss+xml">
   <link rel="alternate" href="/en/feed/releases.xml" title="Node.js Blog: Releases" type="application/rss+xml">
