--- a/resource/pass.html
+++ b/resource/pass.html
@@ -44,36 +44,36 @@
   <header>
     <div class="container">
   
-      <a href="/en" id="logo">
+      <a rel="next" href="/en" id="logo">
         <img src="/static/images/logo.svg" alt="node.js">
       </a>
   
       <nav>
         <ul class="list-divider-pipe">
           <li class="active">
-            <a href="/en/">Home</a>
+            <a rel="next" href="/en/">Home</a>
           </li>
   
             <li>
-                <a href="/en/about/">About</a>
+                <a rel="next" href="/en/about/">About</a>
             </li>
             <li>
-                <a href="/en/download/">Downloads</a>
+                <a rel="next" href="/en/download/">Downloads</a>
             </li>
             <li>
-                <a href="/en/docs/">Docs</a>
+                <a rel="next" href="/en/docs/">Docs</a>
             </li>
             <li>
-                <a href="/en/get-involved/">Get Involved</a>
+                <a rel="next" href="/en/get-involved/">Get Involved</a>
             </li>
             <li>
-                <a href="/en/security/">Security</a>
+                <a rel="next" href="/en/security/">Security</a>
             </li>
             <li>
-                <a href="/en/blog/">News</a>
+                <a rel="next" href="/en/blog/">News</a>
             </li>
             <li class="nav-foundation">
-                <a href="https://foundation.nodejs.org/">Foundation</a>
+                <a rel="next" href="https://foundation.nodejs.org/">Foundation</a>
             </li>
         </ul>
       </nav>
@@ -86,14 +86,14 @@
 
       <div id="home-intro">
 
-        <p>Node.js® is a JavaScript runtime built on <a href="https://developers.google.com/v8/">Chrome&#39;s V8 JavaScript engine</a>.
+        <p>Node.js® is a JavaScript runtime built on <a rel="next" href="https://developers.google.com/v8/">Chrome&#39;s V8 JavaScript engine</a>.
 Node.js uses an event-driven, non-blocking I/O model that makes it
-lightweight and efficient. Node.js&#39; package ecosystem, <a href="https://www.npmjs.com/">npm</a>, is the largest ecosystem of open
+lightweight and efficient. Node.js&#39; package ecosystem, <a rel="next" href="https://www.npmjs.com/">npm</a>, is the largest ecosystem of open
 source libraries in the world.</p>
 
 
         <p class="home-version home-version-banner">
-          <a href="https://medium.com/@nodejs/april-2018-release-updates-from-the-node-js-project-71687e1f7742">
+          <a rel="next" href="https://medium.com/@nodejs/april-2018-release-updates-from-the-node-js-project-71687e1f7742">
             Node 4.x is End Of Life – April Release Updates
           </a>
         </p>
@@ -103,20 +103,20 @@ source libraries in the world.</p>
 
         <div class="home-downloadblock">
 
-          <a href="https://nodejs.org/dist/v8.11.1/" class="home-downloadbutton" title="Download 8.11.1 LTS" data-version="v8.11.1">
+          <a rel="next" href="https://nodejs.org/dist/v8.11.1/" class="home-downloadbutton" title="Download 8.11.1 LTS" data-version="v8.11.1">
             8.11.1 LTS
             <small>Recommended For Most Users</small>
           </a>
 
           <ul class="list-divider-pipe home-secondary-links">
             <li>
-              <a href="https://nodejs.org/en/download/">Other Downloads</a>
+              <a rel="next" href="https://nodejs.org/en/download/">Other Downloads</a>
             </li>
             <li>
-              <a href="https://github.com/nodejs/node/blob/master/doc/changelogs/CHANGELOG_V8.md#8.11.1">Changelog</a>
+              <a rel="next" href="https://github.com/nodejs/node/blob/master/doc/changelogs/CHANGELOG_V8.md#8.11.1">Changelog</a>
             </li>
             <li>
-              <a href="https://nodejs.org/dist/latest-v8.x/docs/api/">API Docs</a>
+              <a rel="next" href="https://nodejs.org/dist/latest-v8.x/docs/api/">API Docs</a>
             </li>
           </ul>
 
@@ -124,58 +124,58 @@ source libraries in the world.</p>
 
           <div class="home-downloadblock">
 
-            <a href="https://nodejs.org/dist/v10.0.0/" class="home-downloadbutton"  title="Download 10.0.0 Current"  data-version="v10.0.0">
+            <a rel="next" href="https://nodejs.org/dist/v10.0.0/" class="home-downloadbutton"  title="Download 10.0.0 Current"  data-version="v10.0.0">
               10.0.0 Current
               <small>Latest Features</small>
             </a>
 
             <ul class="list-divider-pipe home-secondary-links">
               <li>
-                <a href="https://nodejs.org/en/download/current/">Other Downloads</a>
+                <a rel="next" href="https://nodejs.org/en/download/current/">Other Downloads</a>
               </li>
               <li>
-                <a href="https://github.com/nodejs/node/blob/master/doc/changelogs/CHANGELOG_V10.md#10.0.0">Changelog</a>
+                <a rel="next" href="https://github.com/nodejs/node/blob/master/doc/changelogs/CHANGELOG_V10.md#10.0.0">Changelog</a>
               </li>
               <li>
-                <a href="https://nodejs.org/dist/latest-v10.x/docs/api/">API Docs</a>
+                <a rel="next" href="https://nodejs.org/dist/latest-v10.x/docs/api/">API Docs</a>
               </li>
             </ul>
 
           </div>
         <p>
-          Or have a look at the <a href="https://github.com/nodejs/Release#release-schedule">LTS schedule.</a>
+          Or have a look at the <a rel="next" href="https://github.com/nodejs/Release#release-schedule">LTS schedule.</a>
         </p>
         <p>
-          Sign up for <a href="https://newsletter.nodejs.org/">Node.js Everywhere</a>, the official Node.js Weekly Newsletter.
+          Sign up for <a rel="next" href="https://newsletter.nodejs.org/">Node.js Everywhere</a>, the official Node.js Weekly Newsletter.
         </p>
       </div>
 
     </div>
   </div>
 
-  <a href="#" id="scroll-to-top">&uarr; <span>Scroll to top</span></a>
+  <a rel="next" href="#" id="scroll-to-top">&uarr; <span>Scroll to top</span></a>
   
   <footer class="no-margin-top" role="contentinfo">
   
     <div class="container">
       <div class="linuxfoundation-footer">
         <div class="issue-link-container">
-          <a class="linuxfoundation-logo" href="http://collabprojects.linuxfoundation.org">
+          <a rel="next" class="linuxfoundation-logo" href="http://collabprojects.linuxfoundation.org">
             <img alt="Linux Foundation Collaborative Projects" src="/static/images/lfcp.png">
           </a>
           <ul class="list-divider-pipe issue-link">
-            <li><a href="https://github.com/nodejs/node/issues">Report Node.js issue</a></li>
-            <li><a href="https://github.com/nodejs/nodejs.org/issues">Report website issue</a></li>
-            <li><a href="https://github.com/nodejs/help/issues">Get Help</a></li>
+            <li><a rel="next" href="https://github.com/nodejs/node/issues">Report Node.js issue</a></li>
+            <li><a rel="next" href="https://github.com/nodejs/nodejs.org/issues">Report website issue</a></li>
+            <li><a rel="next" href="https://github.com/nodejs/help/issues">Get Help</a></li>
           </ul>
         </div>
   
         <p>©  Node.js Foundation. All Rights Reserved. Portions of this site originally ©  Joyent. </p>
-        <p>Node.js is a trademark of Joyent, Inc. and is used with its permission. Please review the <a href="/static/documents/trademark-policy.pdf">Trademark Guidelines of the Node.js Foundation</a>.</p>
+        <p>Node.js is a trademark of Joyent, Inc. and is used with its permission. Please review the <a rel="next" href="/static/documents/trademark-policy.pdf">Trademark Guidelines of the Node.js Foundation</a>.</p>
         <p>Linux Foundation is a registered trademark of The Linux Foundation.</p>
-        <p>Linux is a registered <a href="http://www.linuxfoundation.org/programs/legal/trademark" title="Linux Mark Institute">trademark</a> of Linus Torvalds.</p>
+        <p>Linux is a registered <a rel="next" href="http://www.linuxfoundation.org/programs/legal/trademark" title="Linux Mark Institute">trademark</a> of Linus Torvalds.</p>
         <p>
-          <a href="https://raw.githubusercontent.com/nodejs/node/master/LICENSE">Node.js Project Licensing Information</a>.
+          <a rel="next" href="https://raw.githubusercontent.com/nodejs/node/master/LICENSE">Node.js Project Licensing Information</a>.
         </p>
       </div>
     </div>
